# pygridstreamer

./: .gitignore  README.md  pyproject.toml  setup.py
cells/: numpy.cc  numpy.h
examples/: simple_camera.py  simple_test.py
experimenting/: numpytest.py
source/: arguments.cc  callback.cc  cell.cc  channel.cc  grid.cc  gridmodule.cc  gridmodule.h  parameter.cc
